--- a/data_collection/index.html
+++ b/data_collection/index.html
@@ -7,5 +7,5 @@
 <body>
     <div id="emp_base"></div>
     <script src="jquery-1.11.2.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="backgammon.js"></script>
 </body>
